optimize upload files
